fix alignment tags

--- a/sass/components/fields.scss
+++ b/sass/components/fields.scss
@@ -5,7 +5,7 @@
   &:last-child {
     margin-bottom: 0;
   }
-  > *:last-child {
+  > *:not(.ecl-tag__item):last-child {
     margin-bottom: 0;
   }
 }
